www/tablet/css/fhem-tablet-ui.css
body {
    background-color: #000000;
    font-family: "Helvetica Neue", "Helvetica", "Open Sans", "Arial", "Helvetica", sans-serif;
    -webkit-font-smoothing: antialiased;
    font-size: small;
    color: #eeeeee;
}

@font-face {
    font-family: 'MeteoconsRegular';
    src: url('../fonts/meteocons-webfont.eot');
    src: url('../fonts/meteocons-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/meteocons-webfont.woff') format('woff'),
         url('../fonts/meteocons-webfont.ttf') format('truetype'),
         url('../fonts/meteocons-webfont.svg#MeteoconsRegular') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
        font-family: 'FTUI-icons';
        src:url('../fonts/FTUI-icons.eot');
        src:url('../fonts/FTUI-icons.eot') format('embedded-opentype'),
                url('../fonts/FTUI-icons.woff') format('woff'),
                url('../fonts/FTUI-icons.ttf') format('truetype'),
                url('../fonts/FTUI-icons.svg') format('svg');
        font-weight: normal;
        font-style: normal;
}

[class^="ftui-"], [class*=" ftui-"] {
        font-family: 'FTUI-icons' !important;
        speak: none;
        font-style: normal;
        font-weight: normal;
        font-variant: normal;
        text-transform: none;

        /* Better Font Rendering =========== */
        -webkit-font-smoothing: antialiased;
        -moz-osx-font-smoothing: grayscale;
}

.ftui-door:before {
        content: "\ea00";
}

.ftui-window:before {
        content: "\ea01";
}

[data-type="dimmer"]{
    z-index:2;
}

.container:after {
    content:"";
    display:table;
    clear:both;
}

.bold {
    font-weight: bold !important;
}

.left {
    float: left;
    width: auto;
}

.right {
    float:right;
}

.cell {
    margin:10px 10px !important;
    width: auto;
    text-align: center;
    vertical-align: middle;
}

.centered {
  margin-left:auto;
  margin-right:auto;
  display:table;
}

.inline {
  display: inline-block;
  margin:0px 5px 0px 0px !important;
}


.circlemenu {
    min-height: 52px;
    min-width: 52px;
    display: inline-block;
}

.dialog {
  display: none;
  position: absolute;
  z-index: 2000;
  width: 98%;
  border-bottom: 1px solid #aaa;
  border-radius: 4px;
  box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
  border: 1px solid rgba(0, 0, 0, 0.1);
  background-color:#2A2A2A;
  background-clip: padding-box;
}

.dialog-close {
  line-height: 1;
  font-size: 1.5em;
  position: absolute;
  top: 3px;
  right: 2%;
  text-decoration: none;
  color: #bbb;
}

.dialog-close:hover {
  color: #aa6900;
  -webkit-transition: color 1s ease;
  -moz-transition: color 1s ease;
  transition: color 1s ease;
}

[data-type]:not([data-type="label"]):not(.readonly):not([data-type="symbol"]){
    cursor: pointer;
}

.narrow {
    margin:-5px 5px -6px 5px !important;
    width: auto;
    text-align: center;
}

.wider{
    margin:15px 15px 15px 15px !important;
    width: auto;
    text-align: center;
}

.top-narrow{ margin-top: -15px !important; }
.top-narrow-2x{ margin-top: -30px !important; }

.top-space{ margin-top: 15px !important; }
.top-space-2x{ margin-top: 30px !important; }
.top-space-3x{ margin-top: 45px !important; }

.left-space{ margin-left: 15px !important; }
.left-space-2x{ margin-left: 30px !important; }
.left-space-3x{ margin-left: 45px !important; }

.right-space{ margin-right: 15px !important; }
.right-space-2x{ margin-right: 30px !important; }
.right-space-3x{ margin-right: 45px !important; }

.darker { color: #8C8C8C; }
.thin { font-weight: lighter; }
.bigger { font-size: 320% !important; }
.big { font-size: 200%; }
.large { font-size: 150%; }
.small { font-size: 80%; }
.normal { font-size: 100%; }
.bigplus { font-size: 270%; }

.bottom {vertical-align: bottom;}

.maxw40 { max-width: 40px; }

[data-type="symbol"].big, [data-type="multistatebutton"].big { font-size: 250% !important;}

i#warn {
    font-size: 40% !important;
    margin-left:24%;
    margin-top:-19%;
    color: #aaa;
    font-weight: bold !important;
    font-family: sans-serif;
    letter-spacing: -1px;
}

i#warn-back {
    font-size: 75% !important;
    margin-left:25%;
    margin-top:-20%;
    color: #882200;
}

.doublebox-v {
    min-height: 104px;
    max-height: 104px;
    min-width: 52px;
    max-width: 52px;
}
.doublebox-h {
    min-width: 104px;
    max-width: 104px;
    min-height: 52px;
    max-height: 52px;
}
.doublebox-v [data-type]{
    margin-top:-4px;
    margin-bottom:-4px;
}
.doublebox-h [data-type]{
    margin-left:-6px;
    margin-right:-6px;
}
.triplebox-v {
    min-height: 140x;
    max-height: 140px;
    min-width: 52px;
    max-width: 52px;
}
.triplebox-v [data-type]{
    margin-top:-4px;
    margin-bottom:-4px;
}

.red{ color:#ad3333; }
.green{ color:#32a054; }
.blue{ color:#6699FF; }
.gray { color: #8C8C8C; }

* {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

canvas#progress{
z-index:100;
position:relative;
}

input {
        visibility:hidden;
}

.slider_vertical, .level_vertical{
margin:10px 0px 0px 20% !important;
}
.slider_horizontal, .level_horizontal{
margin:12px 20px 25px 5px !important;
}
.range-min,
.range-max {
    visibility:hidden;
}

.slider_vertical .slidertext{
margin:10px 0px 0px -30% !important;
}

.jq-toast-wrap{
        z-index:100;
}

ul, ol {
    list-style: none;
}

.gridster > ul, .fullsize{
    width: 100% !important;
    height: 100% !important;
}

.gridster {
    width: auto;
}

.gridster > * {
  margin:0;
  padding:0;
}

.gridster .gs_w {
    background: #FFF;
    cursor: pointer;
    -webkit-box-shadow: 0 0 5px rgba(0,0,0,0.3);
    box-shadow: 0 0 5px rgba(0,0,0,0.3);
}

.gridster ul li {
    background-color:#2A2A2A;
    overflow: hidden;
    text-align: center;
}

.gridster li header {
    background: #262626;
    color: #8c8c8c;
    display: block;
    font-size: 11px;
    font-weight: bold;
    line-height: normal;
    padding: 4px 10px ;
    cursor: move;
}

.weather:before {
    font-family: 'MeteoconsRegular';
    content: attr(data-icon);
    font-size: 200%;
    color: #dcdcdc;
}

.menu li:first-child {

}
.menu li {

}
.menu li div{
    color: #555;
    height: 80px;
}
.menu{
    position:absolute;
}
.circleMenu-closed {
    z-index:1000 !important;
    width:0px !important;
}
.circleMenu-open {
    z-index:1001 !important;
}

.ontop{
    position:absolute;
    z-index:1003;
    top:10px;
    left:10px;
}

#shade {
    position:absolute;
    z-index:1001;
    background-color:#000000;
    opacity:0.5;
    height:500%;
    width:120%;
    top:0px;
    left:0px;
}

 @keyframes blink {
      0% { opacity: 1.0; }
      50% { opacity: 0.0; }
      100% { opacity: 1.0; }
    }
    @-webkit-keyframes blink {
      0% { opacity: 1.0; }
      50% { opacity: 0.0; }
      100% { opacity: 1.0; }
    }
    .blink {
      animation: blink 1s step-start 0s infinite;
      -webkit-animation: blink 1s step-start 0s infinite;
    }
    .fa-blink {
      animation: blink 1s step-start 0s infinite;
      -webkit-animation: blink 1s step-start 0s infinite;
    }


select {
    border-radius: 10px;
    border: 2px solid #8C8C8C;
    background: transparent;
    width: 100%;
    padding: 6px !important;
    padding-right: 30px !important;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    font-size: small;
    color: #eeeeee;
}

.large > select {
    font-size: 120%;
}

.big > select {
    font-size: 150%;
}

.w3x > select, [data-type="label"].w3x {
    min-width: 160px;
    max-width: 160px;
    width: 160px;
}

.w2x > select, [data-type="label"].w2x {
    min-width: 110px;
    max-width: 110px;
    width: 110px;
}

.w1x > select, [data-type="label"].w1x {
    min-width: 70px;
    max-width: 70px;
    width: 70px;
}

.select{
    display:inline-block;
    vertical-align:middle;
    position:relative;
}
.select:after{
  position:absolute;
  bottom:.15em;top:.15em;right:.5rem;
  content: "\f107";
  font-family: FontAwesome;
  font-style: normal;
  font-weight: normal;
  text-decoration: inherit;
  font-size: 150%;
  padding: 5px !important;
  pointer-events: none;
}

.rotor .rotor-wrapper {
  position: relative;
  height:100%;
  width:100%;
}

.rotor li {
 position: absolute;
 left:0;
 right:0;
 margin-left:auto;
 margin-right:auto;
 display: inline-block;
}

.rotor li.is-visible {
 opacity: 1;
}

.rotor li.is-hidden {
 opacity:0;
}

.rotor.fade li.is-visible {
 animation: fade-in 2.2s;
}

.rotor.fade li.is-hidden {
 animation: fade-out 2.2s;
}

@keyframes fade-in{
 0%{opacity:0;}
 100%{opacity:1;}
}

@keyframes fade-out{
 0%{opacity:1;}
 100%{opacity:0;}
}

.rotor.rotate li {
 transform-origin: 50% 100%;
 transform: rotateX(180deg);
}

.rotor.rotate li.is-visible {
 transform: rotateX(0deg);
 animation: rotate-in 1.2s;
}

.rotor.rotate li.is-hidden {
 transform: rotateX(180deg);
 animation: rotate-out 1.2s;
}


@keyframes rotate-in {
 0% {
   transform: rotateX(180deg);
   opacity: 0;
 }
 35% {
   transform: rotateX(120deg);
   opacity: 0;
 }
 65% {
   opacity: 0;
 }
 100% {
   transform: rotateX(360deg);
   opacity: 1;
 }
}

@keyframes rotate-out {
 0% {
   transform: rotateX(0deg);
   opacity: 1;
 }
 35% {
   transform: rotateX(-40deg);
   opacity: 1;
 }
 65% {
   opacity: 0;
 }
 100% {
   transform: rotateX(180deg);
   opacity: 0;
 }
}

.symbol.on{color:#aa6900;background-color:#aa6900;}
.symbol.off{color:#505050;background-color:#505050;}
.switch.on{color:#2A2A2A;background-color:#aa6900;}
.switch.off{color:#2A2A2A;background-color:#505050;}
.progress.value {
font-size: 70% !important;
color: #aaa;
font-family: sans-serif;
letter-spacing: -1px;
}

